Bug 1928745 - test(webgpu): update observed intermittents r=webgpu-reviewers,nical
Differential Revision: https://phabricator.services.mozilla.com/D227766

UltraBlame original commit: 3c8f1071200cc44ce182a9094e435a24e22b2e15

--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupStorageSize/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupStorageSize/cts.https.html.ini
@@ -1179,6 +1179,24 @@ vec2
 3E
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -1209,6 +1227,22 @@ vec2
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -1262,8 +1296,6 @@ os
 "
 win
 "
-and
-debug
 :
 [
 PASS
