--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupsPerDimension/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxComputeWorkgroupsPerDimension/cts.https.html.ini
@@ -346,6 +346,50 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -373,6 +417,50 @@ axis
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -3158,8 +3246,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -3199,8 +3285,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -3240,8 +3324,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
@@ -3281,8 +3363,6 @@ os
 "
 linux
 "
-and
-debug
 :
 [
 PASS
