--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxInterStageShaderVariables/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/capability_checks/limits/maxInterStageShaderVariables/cts.https.html.ini
@@ -48,6 +48,23 @@ os
 "
 linux
 "
+and
+debug
+:
+[
+OK
+CRASH
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
 :
 [
 OK
@@ -1904,6 +1921,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -1952,6 +1985,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2014,6 +2063,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2062,6 +2127,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2124,6 +2205,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2172,6 +2269,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2234,6 +2347,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2282,6 +2411,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2344,6 +2489,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2392,6 +2553,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2454,6 +2631,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2502,6 +2695,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2564,6 +2773,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2612,6 +2837,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2674,6 +2915,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2722,6 +2979,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2784,6 +3057,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2832,6 +3121,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -2894,6 +3199,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -2942,6 +3263,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -3004,6 +3341,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -3052,6 +3405,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -3114,6 +3483,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -3162,6 +3547,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -3224,6 +3625,22 @@ PASS
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 limitTest
@@ -3272,6 +3689,22 @@ os
 win
 "
 and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
 debug
 :
 [
@@ -3341,8 +3774,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3414,8 +3865,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3487,8 +3956,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3560,8 +4047,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3633,8 +4138,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3706,8 +4229,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3779,8 +4320,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -3852,8 +4411,26 @@ os
 "
 linux
 "
+and
+debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
