--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/state/device_lost/destroy/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/state/device_lost/destroy/cts.https.html.ini
@@ -22437,6 +22437,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22488,6 +22503,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22534,6 +22564,21 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -22590,6 +22635,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22641,6 +22701,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22687,6 +22762,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -22830,6 +22920,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22881,6 +22986,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -22927,6 +23047,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -22983,6 +23118,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23029,6 +23179,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -23085,6 +23250,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23131,6 +23311,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -23189,6 +23384,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23242,6 +23452,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23293,6 +23518,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23339,6 +23579,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -23601,6 +23856,21 @@ os
 =
 =
 "
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -23649,6 +23919,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -58954,6 +59239,21 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
