--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureGather/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureGather/cts.https.html.ini
@@ -20256,6 +20256,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
@@ -20691,6 +20709,24 @@ os
 "
 win
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
 :
 FAIL
 if
