--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/zero_init/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/zero_init/cts.https.html.ini
@@ -3242,6 +3242,50 @@ batch__
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
 FAIL
 [
 :
@@ -3265,6 +3309,50 @@ batch__
 17
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -3993,20 +4081,6 @@ os
 "
 win
 "
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-win
-"
-and
-not
-debug
 :
 [
 TIMEOUT
@@ -4060,20 +4134,6 @@ os
 "
 win
 "
-and
-debug
-:
-FAIL
-if
-os
-=
-=
-"
-win
-"
-and
-not
-debug
 :
 [
 TIMEOUT
