--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/image_copy/texture_related/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/image_copy/texture_related/cts.https.html.ini
@@ -23,6 +23,23 @@ implementation
 status
 :
 backlog
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 :
 method
@@ -39,7 +56,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -56,7 +117,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -73,7 +178,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -90,7 +239,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -107,7 +300,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -124,7 +361,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -141,7 +422,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -158,7 +483,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -175,7 +544,51 @@ dimension
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 cts
 .
@@ -69199,12 +69612,73 @@ implementation
 status
 :
 backlog
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 :
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 cts
 .
@@ -69230,6 +69704,23 @@ implementation
 status
 :
 backlog
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 :
 method
@@ -69255,7 +69746,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69281,7 +69816,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69307,7 +69886,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69333,7 +69956,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69359,7 +70026,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69385,7 +70096,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69411,7 +70166,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69437,7 +70236,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69463,7 +70306,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69489,7 +70376,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69515,7 +70446,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 method
@@ -69541,7 +70516,51 @@ size
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 [
 cts
 .
