Bug 1928422 [wpt PR 48910] - Update wpt metadata, a=testonly
wpt-pr: 48910
wpt-type: metadata

UltraBlame original commit: 091ccb142132c68634a5e3a5b3591b6f690d9881

--- a/testing/web-platform/meta/html/semantics/forms/the-select-element/customizable-select/switch-picker-appearance.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-select-element/customizable-select/switch-picker-appearance.tentative.html.ini
@@ -81,3 +81,92 @@ picker
 expected
 :
 FAIL
+[
+Test
+of
+the
+test
+harness
+]
+expected
+:
+FAIL
+[
+The
+select
+picker
+is
+closed
+if
+the
+<
+select
+>
+appearance
+value
+is
+changed
+via
+CSS
+while
+the
+picker
+is
+open
+]
+expected
+:
+FAIL
+[
+The
+select
+picker
+is
+closed
+if
+the
+:
+:
+picker
+(
+)
+appearance
+value
+is
+changed
+via
+CSS
+while
+the
+picker
+is
+open
+]
+expected
+:
+FAIL
+[
+The
+select
+picker
+is
+closed
+if
+the
+<
+select
+>
+inline
+appearance
+value
+is
+changed
+while
+the
+picker
+is
+open
+]
+expected
+:
+FAIL
