Bug 1928543 [wpt PR 48918] - Don't detect an infrastructure manifest as an untracked file, a=testonly
Automatic update from web-platform-tests
Don't detect an infrastructure manifest as an untracked file (#48918)

--

wpt-commits: 03df279a40706bfb02198e56bef36312a1851c65
wpt-pr: 48918

UltraBlame original commit: 89ca257c5b02bd9ad80bedf4129840308ca60953

--- a/testing/web-platform/tests/.gitignore
+++ b/testing/web-platform/tests/.gitignore
@@ -51,6 +51,34 @@ config
 .
 json
 #
+The
+default
+manifest
+location
+when
+running
+infrastructure
+tests
+locally
+with
+#
+-
+-
+metadata
+=
+infrastructure
+/
+metadata
+.
+/
+infrastructure
+/
+metadata
+/
+MANIFEST
+.
+json
+#
 Files
 generated
 when
