Bug 1928632 [wpt PR 48926] - Update wpt metadata, a=testonly
wpt-pr: 48926
wpt-type: metadata

UltraBlame original commit: 7cab182b8e9eda132847ff1183d6bb5602c0d422

--- a/testing/web-platform/meta/media-capabilities/decodingInfo-webrtc.any.js.ini
+++ b/testing/web-platform/meta/media-capabilities/decodingInfo-webrtc.any.js.ini
@@ -1,7 +1,123 @@
 [
 decodingInfo
-.
+-
 webrtc
+.
+any
+.
+worker
+.
+html
+]
+[
+Test
+that
+decodingInfo
+returns
+a
+valid
+MediaCapabilitiesInfo
+objects
+]
+expected
+:
+FAIL
+[
+Test
+that
+decodingInfo
+returns
+supported
+smooth
+and
+powerEfficient
+set
+to
+false
+for
+non
+-
+webrtc
+video
+content
+type
+.
+]
+expected
+:
+FAIL
+[
+Test
+that
+decodingInfo
+returns
+supported
+smooth
+and
+powerEfficient
+set
+to
+false
+for
+non
+-
+webrtc
+audio
+content
+type
+.
+]
+expected
+:
+FAIL
+[
+Test
+that
+decodingInfo
+returns
+supported
+true
+for
+the
+codec
+audio
+/
+opus
+]
+expected
+:
+FAIL
+[
+Test
+that
+decodingInfo
+returns
+supported
+true
+for
+the
+codec
+video
+/
+VP9
+;
+profile
+-
+level
+=
+"
+0
+"
+]
+expected
+:
+FAIL
+[
+decodingInfo
+-
+webrtc
+.
+any
 .
 html
 ]
@@ -87,25 +203,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -130,25 +227,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -173,25 +251,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -216,25 +275,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -271,25 +311,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -326,25 +347,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -391,25 +393,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -450,25 +433,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -515,25 +479,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -574,25 +519,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
