--- a/testing/web-platform/meta/media-capabilities/encodingInfo-webrtc.any.js.ini
+++ b/testing/web-platform/meta/media-capabilities/encodingInfo-webrtc.any.js.ini
@@ -1,7 +1,9 @@
 [
 encodingInfo
-.
+-
 webrtc
+.
+any
 .
 html
 ]
@@ -87,25 +89,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -130,25 +113,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -173,25 +137,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -216,25 +161,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -271,25 +197,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -326,25 +233,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -391,25 +279,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -450,25 +319,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -515,25 +365,6 @@ getCapabilities
 (
 )
 ]
-bug
-:
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1825286
 expected
 :
 FAIL
@@ -574,25 +405,120 @@ getCapabilities
 (
 )
 ]
-bug
+expected
 :
-https
+FAIL
+[
+encodingInfo
+-
+webrtc
+.
+any
+.
+worker
+.
+html
+]
+[
+Test
+that
+encodingInfo
+returns
+a
+valid
+MediaCapabilitiesInfo
+objects
+]
+expected
 :
-/
-/
-bugzilla
+FAIL
+[
+Test
+that
+encodingInfo
+returns
+supported
+smooth
+and
+powerEfficient
+set
+to
+false
+for
+non
+-
+webrtc
+video
+content
+type
 .
-mozilla
+]
+expected
+:
+FAIL
+[
+Test
+that
+encodingInfo
+returns
+supported
+smooth
+and
+powerEfficient
+set
+to
+false
+for
+non
+-
+webrtc
+audio
+content
+type
 .
-org
+]
+expected
+:
+FAIL
+[
+Test
+that
+encodingInfo
+returns
+supported
+true
+for
+the
+codec
+audio
 /
-show_bug
-.
-cgi
-?
-id
+opus
+]
+expected
+:
+FAIL
+[
+Test
+that
+encodingInfo
+returns
+supported
+true
+for
+the
+codec
+video
+/
+VP9
+;
+profile
+-
+level
 =
-1825286
+"
+0
+"
+]
 expected
 :
 FAIL
