Bug 1928639 [wpt PR 48927] - Update wpt metadata, a=testonly
wpt-pr: 48927
wpt-type: metadata

UltraBlame original commit: c234a0daea1d07387b56ffcd2b3a70c3f6ae34da

--- a/testing/web-platform/meta/css/css-conditional/container-queries/scroll-state/scroll-state-overflowing-pseudo.html.ini
+++ b/testing/web-platform/meta/css/css-conditional/container-queries/scroll-state/scroll-state-overflowing-pseudo.html.ini
@@ -9,22 +9,6 @@ pseudo
 .
 html
 ]
-[
-:
-:
-before
-/
-:
-:
-after
-matching
-after
-content
-starts
-overflowing
-#
-scroller
-]
 expected
 :
-FAIL
+ERROR
