--- a/testing/web-platform/meta/FileAPI/BlobURL/cross-partition-navigation.tentative.https.html.ini
+++ b/testing/web-platform/meta/FileAPI/BlobURL/cross-partition-navigation.tentative.https.html.ini
@@ -32,3 +32,71 @@ navigation
 expected
 :
 FAIL
+[
+Blob
+URL
+window
+.
+open
+should
+enforce
+noopener
+for
+a
+cross
+-
+top
+-
+level
+-
+site
+navigation
+]
+expected
+:
+FAIL
+[
+Blob
+URL
+link
+click
+should
+enforce
+noopener
+for
+a
+cross
+-
+top
+-
+level
+-
+site
+navigation
+]
+expected
+:
+FAIL
+[
+Blob
+URL
+area
+element
+click
+should
+enforce
+noopener
+for
+a
+cross
+-
+top
+-
+level
+-
+site
+navigation
+]
+expected
+:
+FAIL
