Bug 1929040 - [wpt-sync] Update web-platform-tests to d4fb35c4980b6581ce0535b2dac71cbc62f4bd3d, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: d4fb35c4980b6581ce0535b2dac71cbc62f4bd3d
wpt-type: landing

UltraBlame original commit: 0f235ae77130977658ba0d9f8f7cc20fcb4f4c4c

--- a/testing/web-platform/meta/fetch/api/abort/general.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/abort/general.any.js.ini
@@ -103,6 +103,25 @@ linux
 "
 )
 and
+debug
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 debug
 :
@@ -659,9 +678,6 @@ expected
 :
 if
 not
-asan
-and
-not
 fission
 and
 (
@@ -672,16 +688,6 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-asan
-and
-not
-fission
 :
 [
 PASS
