--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-unsafe-none.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-unsafe-none.https.html.ini
@@ -1497,12 +1497,33 @@ html
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
 :
 [
 OK
@@ -1538,14 +1559,36 @@ last
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
 :
 [
 OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+OK
+ERROR
 TIMEOUT
 ]
