--- a/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
+++ b/testing/web-platform/meta/intersection-observer/cross-origin-iframe.sub.html.ini
@@ -16,6 +16,9 @@ rAF
 expected
 :
 if
+not
+fission
+and
 debug
 and
 (
@@ -28,6 +31,13 @@ android
 )
 :
 PASS
+if
+fission
+:
+[
+FAIL
+PASS
+]
 [
 PASS
 FAIL
@@ -64,13 +74,43 @@ os
 =
 =
 "
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 mac
 "
 )
 and
+not
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -81,28 +121,8 @@ linux
 "
 )
 and
-not
 fission
 :
-PASS
-if
-os
-=
-=
-"
-win
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -130,51 +150,12 @@ linux
 and
 fission
 and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
 asan
-and
-not
-tsan
 :
 [
 FAIL
 PASS
 ]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-PASS
 if
 (
 os
