--- a/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
+++ b/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
@@ -37,6 +37,34 @@ os
 =
 =
 "
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
