--- a/testing/web-platform/meta/webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html.ini
@@ -11,6 +11,23 @@ os
 =
 =
 "
+mac
+"
+)
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 android
 "
 )
@@ -33,4 +50,29 @@ expected
 [
 PASS
 FAIL
+]
+[
+Element
+Source
+tests
+completed
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
 ]
