--- a/testing/web-platform/meta/webdriver/tests/bidi/input/perform_actions/navigation.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/input/perform_actions/navigation.py.ini
@@ -28,10 +28,75 @@ id
 expected
 :
 if
-not
-remoteAsyncEvents
+debug
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+version
+=
+=
+"
+Ubuntu
+22
+.
+04
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+debug
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 FAIL
+if
+debug
+and
+not
+fission
+:
+FAIL
+if
+not
+debug
+:
+FAIL
+[
+FAIL
+PASS
+]
 [
 test_pointer
 ]
@@ -57,7 +122,72 @@ id
 expected
 :
 if
-not
-remoteAsyncEvents
+debug
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+version
+=
+=
+"
+Ubuntu
+22
+.
+04
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+debug
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 FAIL
+if
+debug
+and
+not
+fission
+:
+FAIL
+if
+not
+debug
+:
+FAIL
+[
+FAIL
+PASS
+]
