--- a/testing/web-platform/meta/css/css-scroll-snap-2/scrollsnapchange/scrollsnapchange-scrolling-non-snapping-axis.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-scroll-snap-2/scrollsnapchange/scrollsnapchange-scrolling-non-snapping-axis.tentative.html.ini
@@ -32,4 +32,21 @@ scrollsnapchange
 ]
 expected
 :
+NOTRUN
+[
+keyboard
+scroll
+on
+non
+-
+snapping
+axis
+doesn
+'
+t
+trigger
+scrollsnapchange
+]
+expected
+:
 TIMEOUT
