--- a/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
+++ b/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
@@ -18,12 +18,6 @@ html
 expected
 :
 if
-not
-asan
-and
-not
-fission
-and
 (
 os
 =
@@ -32,14 +26,37 @@ os
 linux
 "
 )
+and
+not
+tsan
+and
+not
+debug
+and
+fission
+and
+asan
 :
 [
 ERROR
 TIMEOUT
 ]
 if
-asan
+(
+os
+=
+=
+"
+linux
+"
+)
 and
+not
+tsan
+and
+debug
+and
+not
 fission
 :
 [
@@ -47,30 +64,3 @@ ERROR
 TIMEOUT
 ]
 ERROR
-[
-\
-n
-View
-transitions
-:
-null
-event
-.
-viewTransition
-when
-new
-page
-removes
-opt
--
-in
-\
-n
-before
-pagereveal
-\
-n
-]
-expected
-:
-TIMEOUT
