--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
@@ -129,13 +129,9 @@ and
 not
 fission
 and
-not
 debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -146,30 +142,22 @@ win
 "
 )
 and
-not
 debug
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
 =
 =
 "
-mac
+linux
 "
 )
 and
-not
-debug
+fission
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
@@ -179,6 +167,10 @@ android
 "
 :
 FAIL
+[
+PASS
+FAIL
+]
 [
 invoking
 playing
