--- a/testing/web-platform/meta/mediacapture-streams/MediaStreamTrack-MediaElement-disabled-video-is-black.https.html.ini
+++ b/testing/web-platform/meta/mediacapture-streams/MediaStreamTrack-MediaElement-disabled-video-is-black.https.html.ini
@@ -44,10 +44,50 @@ linux
 )
 and
 not
+asan
+and
+not
 debug
 and
 not
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+asan
+and
+not
+fission
 :
 [
 PASS
