--- a/testing/web-platform/meta/webdriver/tests/bidi/script/evaluate/exception_details.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/script/evaluate/exception_details.py.ini
@@ -176,3 +176,33 @@ cgi
 id
 =
 1853953
+[
+test_exception_details
+[
+undefined
+-
+expected0
+\
+]
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+and
+fission
+:
+[
+PASS
+ERROR
+]
