--- a/testing/web-platform/meta/webstorage/localstorage-about-blank-3P-iframe-opens-3P-window.partitioned.html.ini
+++ b/testing/web-platform/meta/webstorage/localstorage-about-blank-3P-iframe-opens-3P-window.partitioned.html.ini
@@ -56,14 +56,37 @@ linux
 "
 )
 and
-fission
-and
 (
 processor
 =
 =
 "
 x86_64
+"
+)
+and
+fission
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
 "
 )
 :
