Bug 1924720 - Generate baseline profiles for Beta apks r=rsainani
Differential Revision: https://phabricator.services.mozilla.com/D225970

UltraBlame original commit: ffb7b8098e029b36abaf3cd4b162a94f03442f57

--- a/taskcluster/kinds/build-bundle/kind.yml
+++ b/taskcluster/kinds/build-bundle/kind.yml
@@ -1407,6 +1407,39 @@ aar
 shippable
 /
 opt
+baseline
+-
+profile
+:
+generate
+-
+baseline
+-
+profile
+-
+firebase
+-
+fenix
+fetches
+:
+baseline
+-
+profile
+:
+-
+artifact
+:
+baseline
+-
+prof
+.
+txt
+extract
+:
+false
+dest
+:
+baselineProfiles
 description
 :
 '
@@ -1466,6 +1499,20 @@ gradle
 build
 :
 fenix
+baseline
+-
+profile
+-
+path
+:
+/
+builds
+/
+worker
+/
+fetches
+/
+baselineProfiles
 shipping
 -
 phase
