--- a/taskcluster/kinds/build-apk/kind.yml
+++ b/taskcluster/kinds/build-apk/kind.yml
@@ -1407,6 +1407,39 @@ aar
 shippable
 /
 opt
+baseline
+-
+profile
+:
+generate
+-
+baseline
+-
+profile
+-
+firebase
+-
+fenix
+fetches
+:
+baseline
+-
+profile
+:
+-
+artifact
+:
+baseline
+-
+prof
+.
+txt
+extract
+:
+false
+dest
+:
+baselineProfiles
 include
 -
 shippable
@@ -1449,6 +1482,20 @@ apk
 size
 :
 true
+baseline
+-
+profile
+-
+path
+:
+/
+builds
+/
+worker
+/
+fetches
+/
+baselineProfiles
 run
 -
 on
